genarte/update bill each month, display bill each month, connect back-end login system